Setup sessions and updated a user model. I also setup our devices to be updated and managed in a model as well.
